--- a/etc/nginx/default.conf
+++ b/etc/nginx/default.conf
@@ -5,7 +5,7 @@ server {
     listen [::]:80;
     server_name skyros.t99ltd.info;
     location / {
-        proxy_pass skyros_web:80
+        proxy_pass skyros_web:80;
     }
     
 }
