--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,16 @@ services:
             - "./web:/var/www/html"
             - "./etc/nginx/default.template.conf:/etc/nginx/conf.d/default.template"
         ports:
-            - "80:80"
-            - "443:443"
+            - "8000:80"
+            - "3000:443"
         environment:
             - NGINX_HOST=${NGINX_HOST}
         command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
         restart: always
         depends_on:
             - php
-            - mysqldb
+        networks:
+            - skyros_net
     php:
         image: nanoninja/php-fpm:${PHP_VERSION}
         container_name: skyros_php
@@ -25,11 +26,16 @@ services:
         volumes:
             - "./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini"
             - "./web:/var/www/html"
+        networks:
+            - skyros_net
     composer:
         image: "composer"
         volumes:
             - "./web/libs/composer/:/app"
         command: composer install
+        networks:
+            - skyros_net
+
     myadmin:
         image: phpmyadmin/phpmyadmin
         container_name: phpmyadmin
@@ -41,6 +47,8 @@ services:
         restart: always
         depends_on:
             - mysqldb
+        networks:
+            - mysql_net
     mysqldb:
         image: mysql:${MYSQL_VERSION}
         container_name: ${MYSQL_HOST}
@@ -56,3 +64,12 @@ services:
             - "8989:3306"
         volumes:
             - "./data/db/mysql:/var/lib/mysql"
+        networks:
+            - mysql_net
+            - skyros_net
+
+networks:
+    skyros_net:
+        external: true
+        driver: bridge
+    mysql_net:
