--- a/etc/nginx/default.conf
+++ b/etc/nginx/default.conf
@@ -3,7 +3,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name skyros.t99ltd.info;
+    server_name localhost;
     location / {
         proxy_pass http://skyros_web;
     }
