--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # See https://docs.docker.com/compose/environment-variables/#the-env-file
 
 # Nginx
-NGINX_HOST=0.0.0.0
+NGINX_HOST=skyros.t99ltd.info
 
 # PHP
 
