--- a/etc/nginx/default.conf
+++ b/etc/nginx/default.conf
@@ -1,11 +1,24 @@
 # Nginx-proxy configuration
 
-server {
-    listen 80;
-    listen [::]:80;
-    server_name localhost;
-    location / {
-        proxy_pass http://skyros_web;
-    }
-    
+upstream skyros {
+  server        skyros_web:80;
 }
+
+server {
+  listen 80;
+  listen [::]:80;
+  server_name   skyros.t99ltd.info;
+
+  location / {
+    proxy_pass  http://skyros;
+  }
+}
+# server {
+#     listen 80;
+#     listen [::]:80;
+#     server_name localhost;
+#     location / {
+#         proxy_pass http://skyros_web;
+#     }
+    
+# }
