--- a/etc/nginx/default.conf
+++ b/etc/nginx/default.conf
@@ -13,6 +13,20 @@ server {
     proxy_pass  http://skyros;
   }
 }
+
+upstream httpd {
+  server        httpd:80;
+}
+
+server {
+  listen 80;
+  listen [::]:80;
+  server_name   httpd.t99ltd.info;
+
+  location / {
+    proxy_pass  http://httpd;
+  }
+}
 # server {
 #     listen 80;
 #     listen [::]:80;
