--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
         image: nginx:alpine
         volumes:
             - "./etc/nginx/default.conf:/etc/nginx/conf.d/default.conf"
+            - "./etc/nginx/httpd.conf:/etc/nginx/conf.d/httpd.conf"
         ports:
             - "80:80"
             - "443:443"   
